--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
       referrerpolicy="no-referrer"
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+    <title>Task Tracker</title>
   </head>
   <body>
     <noscript>
